// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib/flyout2 should render 1`] = `
<button
  aria-label="text"
  className="msla-button msla-flyout"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    alt=""
    className="msla-flyout-icon"
    draggable={false}
    role="presentation"
    src="information_tiny.svg"
  />
</button>
`;

exports[`lib/flyout2 should render with a documentation link 1`] = `
<button
  aria-label="text"
  className="msla-button msla-flyout"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    alt=""
    className="msla-flyout-icon"
    draggable={false}
    role="presentation"
    src="information_tiny.svg"
  />
</button>
`;

exports[`lib/flyout2 should render with a non-zero tab index 1`] = `
<button
  aria-label="text"
  className="msla-button msla-flyout"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={-1}
>
  <img
    alt=""
    className="msla-flyout-icon"
    draggable={false}
    role="presentation"
    src="information_tiny.svg"
  />
</button>
`;

exports[`lib/flyout2 should render with a title 1`] = `
<button
  aria-label="title"
  className="msla-button msla-flyout"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
  title="title"
>
  <img
    alt=""
    className="msla-flyout-icon"
    draggable={false}
    role="presentation"
    src="information_tiny.svg"
  />
</button>
`;

exports[`lib/flyout2 should render with an ARIA label 1`] = `
<button
  aria-label="aria-label"
  className="msla-button msla-flyout"
  onClick={[Function]}
  onKeyPress={[Function]}
  tabIndex={0}
>
  <img
    alt=""
    className="msla-flyout-icon"
    draggable={false}
    role="presentation"
    src="information_tiny.svg"
  />
</button>
`;
